fixed left align for reading list div

--- a/styling/blogs.css
+++ b/styling/blogs.css
@@ -26,6 +26,7 @@ body, ul{
 }
 .left{
   text-align: left;
+  padding-left: 25px;
 }
 
 @font-face {
